
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurohedg"
version = "0.1.0"
description = "NeuroHedg Phase 1: Black–Scholes, Greeks, IV"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["neurohedg*"]

[tool.pytest.ini_options]
addopts = "-q"
